--- a/autor.html
+++ b/autor.html
@@ -32,9 +32,9 @@
                 <div class="dropdown_menu">
                     <ul>
                         <li><a href="primavera.html">I. Primavera</a></li>
-                        <li><a href="#">II. Verano</a></li>
-                        <li><a href="#">III. Otoño</a></li>
-                        <li><a href="#">IV. Invierno</a></li>
+                        <li><a href="verano.html">II. Verano</a></li>
+                        <li><a href="otoño.html">III. Otoño</a></li>
+                        <li><a href="invierno.html">IV. Invierno</a></li>
                     </ul>
                 </div>
             </div>
@@ -84,8 +84,10 @@
                     modernismo.</p>
             </div>
             <div class="verticalimage">
-                <img src="Memorial_Portrait_of_Hiroshige,_by_Kunisada.jpg" alt="Retrato póstumo a la memoria de Hiroshige (1858), de Utagawa Kunisada.">
-                <figcaption>Retrato póstumo a la memoria de Hiroshige (1858), de Utagawa Kunisada.</figcaption>
+                <figure>
+                    <img src="Memorial_Portrait_of_Hiroshige,_by_Kunisada.jpg" alt="Retrato póstumo a la memoria de Hiroshige (1858), de Utagawa Kunisada.">
+                    <figcaption>Retrato póstumo a la memoria de Hiroshige (1858), de Utagawa Kunisada.</figcaption>
+                </figure>
             </div>
         </div>
 
@@ -109,8 +111,10 @@
                     es rociado con polvo de mica.</p>
             </div>
             <div class="verticalimage">
-                <img src="Cherry-Blossom-Utagawa-Hiroshige-36-Views-of-Mount_Fuji-Series-7.jpg" alt="El dique de Sumida en la capital oriental (Tôto Sumida-zutsumi). De la serie treinta y seis vistas del monte Fuji.">
-                <figcaption>El dique de Sumida en la capital oriental (Tôto Sumida-zutsumi). De la serie treinta y seis vistas del monte Fuji.</figcaption>
+                <figure>
+                    <img src="Cherry-Blossom-Utagawa-Hiroshige-36-Views-of-Mount_Fuji-Series-7.jpg" alt="El dique de Sumida en la capital oriental (Tôto Sumida-zutsumi). De la serie treinta y seis vistas del monte Fuji.">
+                    <figcaption>El dique de Sumida en la capital oriental (Tôto Sumida-zutsumi). De la serie treinta y seis vistas del monte Fuji.</figcaption>
+                </figure>
             </div>
             <div class="text">
                 <p class="greysubtitle"></p>
@@ -134,7 +138,7 @@
     </div>
     <footer>
         <div class="footer-content">
-            <p>Proyecto Diseño desde el código</p>
+            <a href="proyecto.html">PROYECTO DISEÑO DESDE EL CÓDIGO</a>
         </div>
     </footer>
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
