--- a/cienvistas.html
+++ b/cienvistas.html
@@ -32,9 +32,9 @@
                 <div class="dropdown_menu">
                     <ul>
                         <li><a href="primavera.html">I. Primavera</a></li>
-                        <li><a href="#">II. Verano</a></li>
-                        <li><a href="#">III. Otoño</a></li>
-                        <li><a href="#">IV. Invierno</a></li>
+                        <li><a href="verano.html">II. Verano</a></li>
+                        <li><a href="otoño.html">III. Otoño</a></li>
+                        <li><a href="invierno.html">IV. Invierno</a></li>
                     </ul>
                 </div>
             </div>
@@ -56,66 +56,102 @@
             <div class="text">
                 <p class="bigsubtitle">CIEN FAMOSAS VISTAS DE EDO</p>
                 <p class="greysubtitle">Imágenes de una ciudad entre poesía visual y realidad idealizada</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur</p>
-            </div>
-            <div class="text">
+                <p>La serie Cien famosas vistas de Edo fue realizada por Hiroshige entre 1856 y 1858 –años Ansei 3 a 
+                    Ansei 5 en el calendario japonés–.nota 3​ Comprende un total de 119 estampas sobre paisajes y 
+                    lugares emblemáticos de Edo –el antiguo nombre de Tokio–. Este proyecto fue uno de los más ambiciosos 
+                    y el último en relevancia de la producción de este artista. Con él, el afamado seguidor de la escuela 
+                    ukiyo-e pretendió reflejar los cambios sufridos por la capital nipona durante esos últimos años, en 
+                    que el progreso y la modernidad avanzaban vertiginosamente destruyendo las costumbres y tradiciones 
+                    ancestrales de Japón. En 1853, el bloqueo naval del comodoro estadounidense Matthew Perry obligó al 
+                    emperador a abrir Japón a Occidente. Posteriormente, en 1855, Edo sufrió un gran terremoto (de magnitud 7,1), 
+                    que provocó una gran destrucción, con un saldo de 10.000 fallecidos y unos 16.000 edificios destruidos. Estos 
+                    cambios en la fisonomía de la ciudad fueron los que quiso reflejar Hiroshige en su serie. </p>
                 <p class="subtitle">INDICE</p>
-                <p class="greysubtitle">Imágenes de una ciudad entre poesía visual y realidad idealizada</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur</p>
             </div>
             <div class="verticalimage">
-                <img src="Hiroshige_Table_of_contents.jpg" alt="Indice realizado por Baisotei Gengyo.">
-                <figcaption>Indice realizado por Baisotei Gengyo.</figcaption>
+                <figure>
+                    <img src="Hiroshige_Table_of_contents.jpg" alt="Indice realizado por Baisotei Gengyo.">
+                    <figcaption>Indice realizado por Baisotei Gengyo.</figcaption>
+                </figure>
             </div>
-
-            <nav class="seasons">
-                <a href="primavera.html">I.PRIMAVERA</a>
-                <a href="#">II.VERANO</a>
-                <a href="#">III.OTOÑO</a>
-                <a href="#">IV.INVIERNO</a>
-            </nav>
-
+            <div class="text">
+                <p>Fue obra de Baisotei Gengyo, a petición del editor tras la muerte del artista –su sello, de 
+                    forma romboidal, se encuentra situado en la parte inferior a la derecha–. En la parte 
+                    superior aparecen dos rectángulos donde figuran los títulos de las láminas dedicadas a la 
+                    primavera, los más numerosos (42); debajo, en forma de abanico, aparecen las estampas del 
+                    verano (30); los dos rectángulos inferiores se refieren al otoño (26) y al invierno (20). 
+                    En la cartela roja de la izquierda aparece el título de la serie y el nombre Ichiryūsai 
+                    Hiroshige –uno de los primeros nombres artísticos del maestro–, y se dice que es su obra más 
+                    representativa (issei ichidai); también aparece el nombre del editor, Sakanaya Eikichi, y su 
+                    dirección, Tōeizan Hirokōji. El fondo presenta motivos alusivos a las estaciones: un ciruelo 
+                    en flor para la primavera, un pájaro hototogisu («cucú japonés») y la luna para el verano, y 
+                    un pajar con siete tipos de hierbas para el otoño y el invierno. La caligrafía está elaborada 
+                    con un tipo de escritura dispersa denominado chirashigaki, propio de las antologías poéticas.</p>
+            </div>
             <div class="text">
                 <p class="subtitle">EL ORDEN DE LAS CIEN VISTAS</p>
-                <p class="greysubtitle">Imágenes de una ciudad entre poesía visual y realidad idealizada</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur</p>
+                <p>Las estampas fueron agrupadas según las estaciones del año, como se indica en el índice: 
+                    42 estampas de primavera, 30 de verano, 26 de otoño y 20 de invierno.</p>
             </div>
-            
+            <nav class="seasons">
+                <a href="primavera.html">I.PRIMAVERA</a>
+            </nav>
+            <div class="gallery">
+                <a href="100_views_edo_001.jpg"><img src="100_views_edo_001.jpg" alt="El puente de Nihonbashi"></a>
+                <a href="100_views_edo_002.jpg"><img src="100_views_edo_002.jpg" alt="Kasumigaseki."></a>
+                <a href="100_views_edo_003.jpg"><img src="100_views_edo_003.jpg" alt="Vista de Hibiya y Soto-Sakurada desde Yamashita-chō"></a>
+                <a href="100_views_edo_004.jpg"><img src="100_views_edo_004.jpg" alt="Tsukudajima y el puente Eitaibashi"></a>
+                <a href="100_views_edo_005.jpg"><img src="100_views_edo_005.jpg" alt="El templo Ekōin de Ryōgoku y el puente Moto-Yanagi"></a>
+            </div>
+            <div class="default_button">
+                <button class="default" type="submit" onclick="location.href='primavera.html'">Ir a Primavera</button>
+            </div>
+            <nav class="seasons">
+                <a href="verano.html">II.VERANO</a>
+            </nav>
+                <div class="gallery">
+                    <a href="100_views_edo_043.jpg"><img src="100_views_edo_043.jpg" alt="Los puentes Nihonbashi y Edobashi"></a>
+                    <a href="100_views_edo_044.jpg"><img src="100_views_edo_044.jpg" alt="Vista de la calle Nihonbashi itchōme"></a>
+                    <a href="100_views_edo_045.jpg"><img src="100_views_edo_045.jpg" alt="El puente Yatsumi no hashi"></a>
+                    <a href="100_views_edo_046.jpg"><img src="100_views_edo_046.jpg" alt="La barca Yoroi y Koami-chō"></a>
+                    <a href="100_views_edo_047.jpg"><img src="100_views_edo_047.jpg" alt="El pabellón Seidō y el río Kandagawa vistos desde el puente Shōheibashi"></a>
+                </div>
+                <div class="default_button">
+                    <button class="default" type="submit" onclick="location.href='verano.html'">Ir a Verano</button>
+                </div>
+                <nav class="seasons">
+                    <a href="otoño.html">III.OTOÑO</a>
+                </nav>    
+                <div class="gallery">
+                    <a href="100_views_edo_073.jpg"><img src="100_views_edo_073.jpg" alt="La ciudad en plena floración, la fiesta Tanabata"></a>
+                    <a href="100_views_edo_074.jpg"><img src="100_views_edo_074.jpg" alt="Comercio de sedas en Ōdenma-chō"></a>
+                    <a href="100_views_edo_075.jpg"><img src="100_views_edo_075.jpg" alt="El barrio de los tintoreros de Kanda"></a>
+                    <a href="100_views_edo_076.jpg"><img src="100_views_edo_076.jpg" alt="Dique de bambú cerca del puente Kyōbashi"></a>
+                    <a href="100_views_edo_077.jpg"><img src="100_views_edo_077.jpg" alt="El puente Inaribashi y el santuario de Minato Jinja en Teppōzu"></a>
+                </div>
+                <div class="default_button">
+                    <button class="default" type="submit" onclick="location.href='otoño.html'">Ir a Otoño</button>
+                </div>                    
+                <nav class="seasons">
+                    <a href="invierno.html">IV.INVIERNO</a>
+                </nav>
+                <div class="gallery">
+                    <a href="100_views_edo_099.jpg"><img src="100_views_edo_099.jpg" alt="El dique Nihontsutsumi y Yoshiwara"></a>
+                    <a href="100_views_edo_100.jpg"><img src="100_views_edo_100.jpg" alt="Campos de arroz en Asakusa y la fiesta Torinomachi"></a>
+                    <a href="100_views_edo_101.jpg"><img src="100_views_edo_101.jpg" alt="El barrio de los tintoreros de Kanda"></a>
+                    <a href="100_views_edo_102.jpg"><img src="100_views_edo_102.jpg" alt="Minowa, Kanasugi y Mikawashima"></a>
+                    <a href="100_views_edo_103.jpg"><img src="100_views_edo_103.jpg" alt="El Gran Puente de Senju"></a>
+                </div>
+                <div class="default_button">
+                    <button class="default" type="submit" onclick="location.href='invierno.html'">Ir a Invierno</button>
+                </div> 
         </div>
     </div>
+    <footer>
+        <div class="footer-content">
+            <a href="proyecto.html">PROYECTO DISEÑO DESDE EL CÓDIGO</a>
+        </div>
+    </footer>
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </body>
 </html>
