--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <div class="dropdown_menu">
                     <ul>
                         <li><a href="primavera.html">I. Primavera</a></li>
-                        <li><a href="#">II. Verano</a></li>
-                        <li><a href="#">III. Otoño</a></li>
-                        <li><a href="#">IV. Invierno</a></li>
+                        <li><a href="verano.html">II. Verano</a></li>
+                        <li><a href="otoño.html">III. Otoño</a></li>
+                        <li><a href="invierno.html">IV. Invierno</a></li>
                     </ul>
                 </div>
             </div>
@@ -62,8 +62,10 @@
                 <p class="greysubtitle">1797-1858</p>
                 <p>Utagawa Hiroshige, seudónimo artístico de Andō Tokutarō, fue un pintor japonés. Perteneció a la Escuela Utagawa, una de las más reputadas del estilo ukiyo-e. Hiroshige fue uno de los principales exponentes del paisajismo japonés, llevando esta disciplina a un nivel artístico y de estilo de gran calidad. Es también conocido como Andō Hiroshige e Ichiyūsai Hiroshige.</p>
             </div>
-            <img src="Hiroshige_-_Taira_no_Kiyomori_ve_apariciones_sobrenaturales.jpg" alt="Taira no Kiyomori ve apariciones sobrenaturales (1840), tríptico en formato ōban, editorial Ibaya Kyūbei.">
-            <figcaption>Taira no Kiyomori ve apariciones sobrenaturales (1840), tríptico en formato ōban, editorial Ibaya Kyūbei.</figcaption>
+            <figure>
+                <img src="Hiroshige_-_Taira_no_Kiyomori_ve_apariciones_sobrenaturales.jpg" alt="Taira no Kiyomori ve apariciones sobrenaturales (1840), tríptico en formato ōban, editorial Ibaya Kyūbei.">
+                <figcaption>Taira no Kiyomori ve apariciones sobrenaturales (1840), tríptico en formato ōban, editorial Ibaya Kyūbei.</figcaption>
+            </figure>
         </div>
         <div class="default_button">
         <button class="default" type="submit" onclick="location.href='autor.html'">Ir a Autor</button>
@@ -80,10 +82,9 @@
         <button class="default" type="submit" onclick="location.href='cienvistas.html'">Ir a Cien vistas</button>
         </div>
     </div>
-
     <footer>
         <div class="footer-content">
-            <p>Proyecto Diseño desde el código</p>
+            <a href="proyecto.html">PROYECTO DISEÑO DESDE EL CÓDIGO</a>
         </div>
     </footer>
     <script src="script.js"></script>
