--- a/primavera.html
+++ b/primavera.html
@@ -32,9 +32,9 @@
                 <div class="dropdown_menu">
                     <ul>
                         <li><a href="primavera.html">I. Primavera</a></li>
-                        <li><a href="#">II. Verano</a></li>
-                        <li><a href="#">III. Otoño</a></li>
-                        <li><a href="#">IV. Invierno</a></li>
+                        <li><a href="verano.html">II. Verano</a></li>
+                        <li><a href="otoño.html">III. Otoño</a></li>
+                        <li><a href="invierno.html">IV. Invierno</a></li>
                     </ul>
                 </div>
             </div>
@@ -56,8 +56,7 @@
             
             <div class="text">
                 <p class="bigsubtitle">I.PRIMAVERA</p>
-                <p class="subtitle">1.EL PUENTE DE NIHONBASHI: ACLARADO DESPUÉS DE LA NEVADA</p>
-                <p class="greysubtitle"></p>
+                <p class="subtitle">1. EL PUENTE DE NIHONBASHI: ACLARADO DESPUÉS DE LA NEVADA</p>
             </div>
 
             <div class="views">
@@ -84,7 +83,135 @@
                     aparece el Palacio del Shōgun y, al fondo, el monte Fuji. Cabe destacar el
                     efecto de bokashi en la gradación de los diversos tonos de azul del río.</p>
             </div>
+
+            <div class="text">
+                <p class="subtitle">2. KASUMIGASEKI</p>
+            </div>
+
+            <div class="views">
+                <div class="verticalimage">
+                    <img src="100_views_edo_002.jpg" alt="Kasumigaseki.">
+                </div>
+                <div class="overlay">
+                    <div class="textviews">
+                        <p lang="ja" class="japsubtitle">霞が関</p>
+                        <p class="italicsubtitle">Kasumigaseki</p>
+                        <p class="italicsubtitle">1-1857</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text">
+                <p>Esta es una composición de acusada verticalidad, donde sobre un eje de una
+                    populosa calle de la ciudad se superpone un amplio cielo con diversas
+                    tonalidades de color. Se sugiere una cierta perspectiva lineal, en la calle que
+                    fluye hacia la bahía de Edo, pero ésta queda mitigada por el intenso
+                    cromatismo. En los dos extremos de la calle se encuentran dos residencias
+                    de señores terratenientes (daimyō): a la izquierda, los Asano de Hiroshima, y
+                    a la derecha, los Kuroda de Fukuoka. En los márgenes destacan también dos
+                    grandes pinos (kadomatsu). Entre la gente pueden reconocerse unos
+                    danzarines, un sacerdote y varios samuráis. En el cielo vuela una cometa que
+                    contiene el símbolo sakana («pez»), primer elemento del apellido del editor
+                    Sakanaya.</p>
+            </div> 
             
+            <div class="text">
+                <p class="subtitle">3. VISTA DE HIBIYA Y SOTO-SAKURADA DESDE YAMASHITA-CHŌ</p>
+            </div>
+
+            <div class="views">
+                <div class="verticalimage">
+                    <img src="100_views_edo_003.jpg" alt="Vista de Hibiya y Soto-Sakurada desde Yamashita-chō .">
+                </div>
+                <div class="overlay">
+                    <div class="textviews">
+                        <p lang="ja" class="japsubtitle">山下町日比谷外さくら田</p>
+                        <p class="italicsubtitle">Yamashita-chō, Hibiya Soto-Sakurada</p>
+                        <p class="italicsubtitle">12-1857</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text">
+                <p>De nuevo una composición vertical con un paisaje de profunda visión con el monte Fuji al
+                    fondo. Está representado el cambio de estación, con los símbolos que representan el Año
+                    Nuevo. A la derecha se percibe un muro perteneciente al Palacio de Edo. En ambos márgenes 
+                    aparecen dos raquetas de hagoita, propias del juego de volante hanetsuki, que se vendían 
+                    en Año Nuevo en el templo Sensōji de Asakusa; más arriba, en el cielo, aparece el volante 
+                    impulsado por las raquetas. Estas raquetas eran de bambú, y en el reverso tenían pintado 
+                    un yakusha-e o un bijin-ga. También figuran en los dos costados ramas de pino. Como en la
+                    lámina anterior, también aparecen varias cometas en el cielo, destacando la superior, una 
+                    cometa yakko con forma de kimono. Al fondo aparece la residencia del daimyō Nabeshima 
+                    Kansō, un fabricante de artillería, con la puerta adornada con una banda de paja de arroz.</p>
+            </div>  
+
+            <div class="text">
+                <p class="subtitle">4. TSUKUDAJIMA Y EL PUENTE EITAIBASHI</p>
+            </div>
+
+            <div class="views">
+                <div class="verticalimage">
+                    <img src="100_views_edo_004.jpg" alt="Tsukudajima y el puente Eitaibashi.">
+                </div>
+                <div class="overlay">
+                    <div class="textviews">
+                        <p lang="ja" class="japsubtitle">永代橋佃しま</p>
+                        <p class="italicsubtitle">Tsukudajima y el puente Eitaibashi</p>
+                        <p class="italicsubtitle">2-1857</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text">
+                <p>Aquí se introduce una visión nocturna, donde se percibe un muelle de la pequeña isla
+                    de Tsukuda, en la bahía de Edo, vista desde el puente Eitaibashi («Puente de la Eternidad»), 
+                    perceptible en un amplio pilar que ocupa el lateral izquierdo. Este puente, construido en 
+                    1698, era el más largo de Edo, y atravesaba el río Sumida, el principal río de la ciudad. 
+                    La isla era un puerto pesquero que tenía el encargo oficial de suministrar pescado fresco al shōgun. 
+                    En las noches de invierno y primavera se pescaba shirauo («pez blanco»), al que atraían con antorchas, 
+                    como la que se puede ver en este cuadro.</p>
+            </div>  
+
+            <div class="text">
+                <p class="subtitle">5. EL TEMPLO EKŌIN DE RYŌGOKU Y EL PUENTE MOTO-YANAGI</p>
+            </div>
+
+            <div class="views">
+                <div class="verticalimage">
+                    <img src="100_views_edo_005.jpg" alt="El templo Ekōin de Ryōgoku y el puente Moto-Yanagi.">
+                </div>
+                <div class="overlay">
+                    <div class="textviews">
+                        <p lang="ja" class="japsubtitle">両ごく回向院元柳橋</p>
+                        <p class="italicsubtitle">Ryōgoku Ekōin Moto-Yanagibashi</p>
+                        <p class="italicsubtitle">5-1857</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text">
+                <p>Se ve de nuevo una vista vertical con el monte Fuji y un amplio cielo azulado, desde una insólita 
+                    perspectiva que, aunque se realiza desde el templo indicado en el título, éste no aparece, figurando 
+                    en cambio en el lateral izquierdo un alto andamio de madera con un tambor en su cima, que muestra el 
+                    gusto de Hiroshige por los elementos anecdóticos. Desde este andamio se tocaban los tambores en las competiciones 
+                    de sumo celebradas en el templo –aquí se celebró el primer torneo de sumo en 1768–. El templo Ekōin, construido 
+                    en 1657, pertenecía a la secta budista de la Tierra Pura (Jōdo), y fue construido para conmemorar a las 100.000 
+                    víctimas del incendio que arrasó la ciudad. Detrás del río Sumida, surcado de barcas y transbordadores, aparece 
+                    la residencia Matsudaira, del señor feudal de Tanba, junto al puente Moto-Yanagi y un gran sauce llorón.</p>
+            </div> 
+
+            <div class="back_button">
+                <button class="default" type="submit" onclick="location.href='cienvistas.html'"><i class="fas fa-chevron-left"></i>Volver a Cien Vistas</i></button>
+                <button class="default" type="submit" onclick="location.href='verano.html'">Ir a Verano<i class="fas fa-chevron-right"></i></i></button>
+            </div>
+
+        </div>
+    </div>
+    <footer>
+        <div class="footer-content">
+            <a href="proyecto.html">PROYECTO DISEÑO DESDE EL CÓDIGO</a>
+        </div>
+    </footer>
      <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </body>
 </html>
