--- a/ukiyoe.html
+++ b/ukiyoe.html
@@ -32,9 +32,9 @@
                 <div class="dropdown_menu">
                     <ul>
                         <li><a href="primavera.html">I. Primavera</a></li>
-                        <li><a href="#">II. Verano</a></li>
-                        <li><a href="#">III. Otoño</a></li>
-                        <li><a href="#">IV. Invierno</a></li>
+                        <li><a href="verano.html">II. Verano</a></li>
+                        <li><a href="otoño.html">III. Otoño</a></li>
+                        <li><a href="invierno.html">IV. Invierno</a></li>
                     </ul>
                 </div>
             </div>
@@ -73,8 +73,10 @@
                     de forma manual con pinceles, pero en el siglo XVIII Suzuki Harunobu desarrolló
                     una técnica de impresión polícroma para producir nishiki-e.</p>
             </div>
-            <img src="Great_Wave_off_Kanagawa.jpg" alt="La gran ola de Kanagawa (1830-1833), grabado de Katsushika Hokusai">
-            <figcaption>La gran ola de Kanagawa (1830-1833), grabado de Katsushika Hokusai</figcaption>
+            <figure>
+                <img src="Great_Wave_off_Kanagawa.jpg" alt="La gran ola de Kanagawa (1830-1833), grabado de Katsushika Hokusai">
+                <figcaption>La gran ola de Kanagawa (1830-1833), grabado de Katsushika Hokusai</figcaption>
+            </figure>
             <div class="text">
                 <p>El ukiyo-e era accesible, dado que podía ser producido de forma masiva. Por lo
                     general, eran adquiridos por personas sin suficiente nivel económico como para
@@ -97,13 +99,14 @@
                     Henri de Toulouse-Lautrec. La estampa japonesa también influyó en algunos de
                     los cuadros de Goya.</p>
             </div>
-            <img src="Utamaro_(1788)_Utamakura_print_No._10_(BM,_cropped).jpg" alt="Estampa shunga de Kitagawa Utamaro">
-            <figcaption>Estampa shunga de Kitagawa Utamaro</figcaption>
+            <figure>
+                <img src="Utamaro_(1788)_Utamakura_print_No._10_(BM,_cropped).jpg" alt="Estampa shunga de Kitagawa Utamaro">
+                <figcaption>Estampa shunga de Kitagawa Utamaro</figcaption>
+            </figure>
         </div>
         <div class="container">
             <div class="text">
                 <p class="subtitle">CREACIÓN DEL UKIYO-E</p>
-                <p class="greysubtitle"></p>
                 <p>Los impresos ukiyo-e se realizan mediante el procedimiento
                     siguiente:
                     - El artista elabora con tinta un dibujo principal.<br>
@@ -123,13 +126,15 @@
                     de ellas impresas más de una vez para obtener la intensidad
                     correcta del color.</p>
             </div>
-            <img src="grabador.jpg" alt="El grabador Niinomi Morichika, de 69 años.">
-            <figcaption>El grabador Niinomi Morichika, de 69 años.</figcaption>
+            <figure>
+                <img src="grabador.jpg" alt="El grabador Niinomi Morichika, de 69 años.">
+                <figcaption>El grabador Niinomi Morichika, de 69 años.</figcaption>
+            </figure>
         </div>
     </div>
     <footer>
         <div class="footer-content">
-            <p>Proyecto Diseño desde el código</p>
+            <a href="proyecto.html">PROYECTO DISEÑO DESDE EL CÓDIGO</a>
         </div>
     </footer>
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
