--- a/invierno.html
+++ b/invierno.html
@@ -221,7 +221,7 @@
             </div>
 
             <div class="back_button">
-                <button class="default" type="submit" onclick="location.href='otoño.html'"><i class="fas fa-chevron-left"></i>Volver a Otoño</i></button>
+                <button class="default" type="submit" onclick="location.href='otoño.html'"><i class="fas fa-chevron-left"></i>Volver a Otoño</button>
             </div>
 
         </div>
