--- a/otoño.html
+++ b/otoño.html
@@ -214,8 +214,8 @@
             </div>
 
             <div class="back_button">
-                <button class="default" type="submit" onclick="location.href='verano.html'"><i class="fas fa-chevron-left"></i>Volver a Verano</i></button>
-                <button class="default" type="submit" onclick="location.href='invierno.html'">Ir a Invierno<i class="fas fa-chevron-right"></i></i></button>
+                <button class="default" type="submit" onclick="location.href='verano.html'"><i class="fas fa-chevron-left"></i>Volver a Verano</button>
+                <button class="default" type="submit" onclick="location.href='invierno.html'">Ir a Invierno<i class="fas fa-chevron-right"></i></button>
             </div>
 
         </div>
