--- a/primavera.html
+++ b/primavera.html
@@ -201,8 +201,8 @@
             </div> 
 
             <div class="back_button">
-                <button class="default" type="submit" onclick="location.href='cienvistas.html'"><i class="fas fa-chevron-left"></i>Volver a Cien Vistas</i></button>
-                <button class="default" type="submit" onclick="location.href='verano.html'">Ir a Verano<i class="fas fa-chevron-right"></i></i></button>
+                <button class="default" type="submit" onclick="location.href='cienvistas.html'"><i class="fas fa-chevron-left"></i>Volver a Cien Vistas</button>
+                <button class="default" type="submit" onclick="location.href='verano.html'">Ir a Verano<i class="fas fa-chevron-right"></i></button>
             </div>
 
         </div>
