--- a/verano.html
+++ b/verano.html
@@ -206,8 +206,8 @@
             </div> 
 
             <div class="back_button">
-                <button class="default" type="submit" onclick="location.href='primavera.html'"><i class="fas fa-chevron-left"></i>Volver a Primavera</i></button>
-                <button class="default" type="submit" onclick="location.href='otoño.html'">Ir a Otoño<i class="fas fa-chevron-right"></i></i></button>
+                <button class="default" type="submit" onclick="location.href='primavera.html'"><i class="fas fa-chevron-left"></i>Volver a Primavera</button>
+                <button class="default" type="submit" onclick="location.href='otoño.html'">Ir a Otoño<i class="fas fa-chevron-right"></i></button>
             </div>
 
         </div>
